--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-sass": "node-sass --include-path scss sass/index.scss css/main.css",
-    "watch-sass": "nodemon -e scss -x \"npm run build-sass\""
+    "watch-sass": "nodemon -e scss -x \" npm run build-sass\""
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/PapelFloreado/banda_peralta#readme",
   "devDependencies": {
-    "node-sass": "^7.0.1",
+    "node-sass": "^7.0.1"
+  },
+  "dependencies": {
     "nodemon": "^2.0.15"
   }
 }
